formatting and typing correction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
     "python.formatting.autopep8Args": ["--indent-size=4"],
     "python.defaultInterpreterPath": "venv/bin/python",
     "[python]": {
-      "editor.defaultFormatter": "ms-python.python", // ms-python.python
+      "editor.defaultFormatter": "ms-python.autopep8", // ms-python.python
       "editor.tabSize": 4,
       "editor.insertSpaces": true,
       "editor.formatOnSave": true,
@@ -56,5 +56,6 @@
       "django-html": "html", // batisteo.vscode-django
       "javascript": "javascriptreact",
       "typescript": "typescriptreact"
-    }
+    },
+    "python.formatting.provider": "none"
   }
