--- a/.env-example
+++ b/.env-example
@@ -6,3 +6,17 @@ SECRET_KEY = 'CHANGE-ME'
 
 # 0 = False - 1 = True
 DEBUG = 1
+
+# Database settings
+# Sqlite
+DATABASE_ENGINE = 'django.db.backends.sqlite3'
+DATABASE_NAME = "./db.sqlite3"
+
+# Postgres
+# DATABASE_ENGINE='django.db.backends.postgresql'
+# DATABASE_NAME="basededados"
+
+DATABASE_USER = "usuario"
+DATABASE_PASSWORD = "senha"
+DATABASE_HOST = "127.0.0.1"
+DATABASE_PORT = "5432"
